--- a/SKLEP/school_version/styl.css
+++ b/SKLEP/school_version/styl.css
@@ -1,11 +1,11 @@
-header, .banner {
+header.baner {
     background-color: #E8C84E;
     height: 50px;
     font-size: 130%;
     text-align: center;
 }
 
-.left-block {
+.lewy {
     background-color: #FFB544;
     height: 500px;
     width: 40%;
@@ -13,15 +13,14 @@ header, .banner {
     float: left;
 }
 
-.center-block {
+.srodkowy {
     height: 500px;
     width: 30%;
     text-align: center;
     float: left;
 }
 
-
-.right-block {
+.prawy {
     background-color: #FFB544;
     height: 500px;
     width: 30%;
@@ -30,7 +29,7 @@ header, .banner {
     float: left;
 }
 
-footer, .footer {
+footer.stopka {
     clear: both;
     background-color: #E8C84E;
     height: 50px;
@@ -49,4 +48,9 @@ img, h3 {
 
 form {
     margin-bottom: 100px;
+}
+
+h1 {
+    margin: 0;
+    line-height: 50px;
 }
